# sdltoast

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CREDITS.md  DEVELOPMENT.md  GAME_DESIGN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PNG_QUICK_START.md  Plugin.toml  QUICKSTART.md  README.md  ROOT_PNG_SUMMARY.txt  SOLUTION_ROOT_PNGS.md  build.bat  build.sh  harvestquest.atlas  sdltoast.rtf  sdltoastnew.rtf  setup_root_pngs.sh
.github/workflows/: build.yml  copilot-setup-steps.yml
SDLDEV/: README.md  sdlnewest1.rtf
_codeql_build_dir/: CPackConfig.cmake  CPackSourceConfig.cmake  HarvestQuest
_codeql_build_dir/assets/: TILESETS_HERE.txt
ai/: enemy_behavior.json
assets/: README.md  TILESETS_HERE.txt
assets/maps/: farm.map
assets/tilesets/: seasons_example.cfg  tileset.cfg
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake  VcpkgHints.cmake
config/: runtime.json
conversations/: blacksmith_oren.json  farmer_gus.json  merchant_lily.json
data/: README.md  crops.json  enemies.json  items.json  npcs.json  quests.json  recipes.json
docs/: ROOT_PNG_TESTING.md  ROOT_PNG_USAGE.md  TILESET_INTEGRATION.md  WORLD_GENERATION.md
schemas/: harvestquest.npc.v1.json  harvestquest.quest.v1.json  harvestquest.recipe.v1.json  harvestquest.tile.v1.json
src/: main.cpp
src/engine/: AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  Game.cpp  Game.h  Input.cpp  Input.h  Logger.cpp  Logger.h  Renderer.cpp  Renderer.h  SpriteSheet.cpp  SpriteSheet.h  TilesetConfig.cpp  TilesetConfig.h
src/entities/: Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  NPC.cpp  NPC.h  Player.cpp  Player.h
src/systems/: AnimalHusbandry.cpp  AnimalHusbandry.h  Calendar.cpp  Calendar.h  Combat.cpp  Combat.h  Crafting.cpp  Crafting.h  Dialogue.cpp  Dialogue.h  Energy.cpp  Energy.h  Farming.cpp  Farming.h  Fishing.cpp  Fishing.h  Inventory.cpp  Inventory.h  Mining.cpp  Mining.h  Quest.cpp  Quest.h  SaveSystem.cpp  SaveSystem.h  Shop.cpp  Shop.h  SkillBonuses.cpp  SkillBonuses.h  Skills.cpp  Skills.h
src/ui/: DialogueBox.cpp  DialogueBox.h  HUD.cpp  HUD.h  Menu.cpp  Menu.h
src/world/: Dungeon.cpp  Dungeon.h  DungeonTheme.cpp  DungeonTheme.h  Map.cpp  Map.h  Tile.cpp  Tile.h  WorldGenerator.cpp  WorldGenerator.h
strategy/: combat.strategygraph
tests/: CMakeLists.txt  test_animal.cpp  test_calendar.cpp  test_combat.cpp  test_crafting.cpp  test_dialogue.cpp  test_dungeon_theme.cpp  test_energy.cpp  test_farming.cpp  test_fishing.cpp  test_inventory.cpp  test_map.cpp  test_mining.cpp  test_npc.cpp  test_quest.cpp  test_savesystem.cpp  test_shop.cpp  test_skill_bonuses.cpp  test_skills.cpp  test_tile.cpp  test_tileset_config.cpp
tools/: generate_tileset.py
worlds/: dungeon.worldgraph  farm.worldgraph  overworld.worldgraph
